--- a/index.html
+++ b/index.html
@@ -4,11 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Store</title>
+
+    <script>
+        var site_url = "http://localhost/sc502/";
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script src="https://unpkg.com/http-vue-loader"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/vue-router@3.5.3/dist/vue-router.js"></script>
+    <script src="/sc502/js/rutas.js"></script>
     
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <div id="app">
+
+        {{ message }}
+
+        <div id="nav">
+            <router-link to="/">Home</router-link> |
+            <router-link to="/acercade">Nosotros</router-link> |
+            <router-link to="/tienda">Tienda</router-link>
+        </div>
+
+        <!-- El router-view se reemplaza deacuerdo a la pagina  -->
+        <router-view></router-view>
+
+    </div>
 
     <script src="js/main.js"></script>
 </body>
