Agregado de la conexión, pero de prueba solamente

--- a/home.html
+++ b/home.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 
-    <script src="index.js"></script>
+
+    <form action="php/index.php">
+        
+    </form>
+
 </body>
 </html>
