--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         </div>
 
         <!-- El router-view se reemplaza deacuerdo a la pagina  -->
-        <router-view></router-view>
+        <div class="pages">
+            <router-view></router-view>
+        </div>
+
 
     </div>
 
